--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-html, body, app-root, .site {
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+html, body, app-root, .site, mat-sidenav-container {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -11,5 +13,9 @@ html, body, app-root, .site {
 }
 
 main {
+  flex: 1;
+}
+
+.fill-remaining-space {
   flex: 1;
 }
