--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,6 +3,6 @@
     <mat-icon>menu</mat-icon>
   </button>
   <!--自定义导入svg的语法-->
-  <mat-icon svgIcon="draw"></mat-icon>
+<!--  <mat-icon svgIcon="draw"></mat-icon>-->
   <span>企业协作平台</span>
 </mat-toolbar>
