--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,4 +5,6 @@
   <!--自定义导入svg的语法-->
 <!--  <mat-icon svgIcon="draw"></mat-icon>-->
   <span>企业协作平台</span>
+  <span class="fill-remaining-space"></span>
+  <mat-slide-toggle (change)="onChange($event)">黑夜模式</mat-slide-toggle>
 </mat-toolbar>
