--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<mat-sidenav-container>
-  <mat-sidenav #sidenav mode="side">
+<mat-sidenav-container [class.my-app-dark-theme]="darkTheme">
+  <mat-sidenav #sidenav mode="over">
     <app-sidebar></app-sidebar>
   </mat-sidenav>
   <div class="site">
     <header>
-      <app-header (toggle)="sidenav.toggle()"></app-header>
+      <app-header (toggle)="sidenav.toggle()" (toggleDarkTheme)="switchTheme($event)"></app-header>
     </header>
     <main>
       <router-outlet></router-outlet>
